src/objects/Pivotal_Story__c.object
<CustomObject>
    <fields>
        <fullName>Accepted_at__c</fullName>
        <description>Acceptance time.</description>
        <label>Accepted at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_At__c</fullName>
        <description>Creation time.</description>
        <label>Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_State__c</fullName>
        <label>Current State</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unscheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unstarted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <description>Due date/time (for a release-type story).</description>
        <label>Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>In-depth explanation of the story requirements.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimate__c</fullName>
        <description>Point value of the story.</description>
        <label>Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Id__c</fullName>
        <description>ID of the integration API that is linked to this story. In API responses, this attribute may be integration_id or integration.</description>
        <label>Integration Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kind__c</fullName>
        <label>Kind</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name of the story.</description>
        <label>Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pivotal_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pivotal Project</label>
        <referenceTo>Pivotal_Project__c</referenceTo>
        <relationshipLabel>Pivotal Stories</relationshipLabel>
        <relationshipName>Pivotal_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <description>Id of the project.</description>
        <label>Project Id</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requested_by_Id__c</fullName>
        <description>The id of the person who requested the story. In API responses, this attribute may be requested_by_id or requested_by.</description>
        <label>Requested by Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Story_Id__c</fullName>
        <description>Database id of the story.</description>
        <externalId>true</externalId>
        <label>Story Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Story_Type__c</fullName>
        <label>Story Type</label>
        <picklist>
            <picklistValues>
                <fullName>Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Story_Url__c</fullName>
        <label>Story Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Updated_At__c</fullName>
        <label>Updated At</label>
        <type>DateTime</type>
    </fields>
    <label>Pivotal Story</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Estimate__c</columns>
        <columns>Story_Url__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pivotal Story Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pivotal Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>